# job-haunt-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  db.sqlite3  manage.py  pyproject.toml
apis/: backends.py  constants.py  exceptions.py  permissions.py  urls.py
apis/models/: __init__.py  auth_models.py  general_settings.py  job_management.py  learning_managment.py  user.py  user_management.py
apis/repositories/: user_repo.py
apis/serializers/: __init__.py  auth_serializers.py  common_serializers.py  job_serializers.py  learning_serializers.py  user_serializers.py
apis/services/: email_service.py
apis/templates/emails/: password_reset.html
apis/utils/: common.py
apis/views/: __init__.py  admin_views.py  auth_views.py  job_views.py  kanban_board_views.py  learning_views.py  user_views.py
job_haunt/: asgi.py  settings.py  urls.py  wsgi.py
